--- a/pages/globals.css
+++ b/pages/globals.css
@@ -17,6 +17,35 @@
     }
   }
 
+  body {
+    margin: 0;
+    text-align: center;
+  }
+
+
+  h1 {
+    margin-top: 0;
+  }
+
+  .top-container {
+    background-color: #E4F9F5;
+  }
+
+  .middle-container {
+    background-color: red;
+    height: 200px;
+    width: 200px;
+  }
+
+  .bottom-container {
+    background-color: blue;
+    height: 200px;
+    width: 200px;
+  }
+
+  .pro {
+    text-decoration: underline;
+  }
   /*.btn-sec {*/
   /*  width: 164px;*/
   /*  @screen sm {*/
